# task_vision

./: Readme.md
Detection task/: Readme.md  colorDetection6.cpp
Detection task/task1/: ArmorDetection.cpp  CMakeLists.txt
Detection task/task2/: CMakeLists.txt  armDetection2.cpp
Detection task/task3(fan)/: CMakeLists.txt  fanDetection.cpp
Detectiontask2/ArmorDetection/: CMakeLists.txt  Readme.md  secondDetection2.cpp
Detectiontask2/fanDetection/: CMakeLists.txt  Readme.md  fan2.cpp
SerialCom/: SerialCom.c
Task ssh/: Readme.md  ssh_communication.md
openvino/: Readme.md
openvino/yolo3/: CMakeLists.txt  Objection_yolo.cpp
ros_communication/: Readme.md
ros_communication/catkin_ros/devel/: .catkin  .rosinstall  local_setup.sh
ros_communication/catkin_ros/devel/include/node_communication/: person.h
ros_communication/catkin_ros/devel/lib/node_communication/: cal_scr  output_pub
ros_communication/catkin_ros/devel/lib/pkgconfig/: node_communication.pc
ros_communication/catkin_ros/devel/share/node_communication/cmake/: node_communication-msg-extras.cmake  node_communication-msg-paths.cmake  node_communicationConfig.cmake
ros_communication/catkin_ros/devel/share/roseus/ros/node_communication/: manifest.l
ros_communication/catkin_ros/install/: _setup_util.py  setup.sh
ros_communication/catkin_ros/src/node_communication/: CMakeLists.txt  package.xml
ros_communication/catkin_ros/src/node_communication/msg/: person.msg
ros_communication/catkin_ros/src/node_communication/src/: cal_scr.cpp  output_pub.cpp
(+7 files in other folders)
